# http-og

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  README.md  clang-format.sh
cmake/generators/constant_processor/: CMakeLists.txt  common.h  data.c  main.c  max_state.c  max_state.h  min_state_bits.h  options.h  print.h
cmake/generators/constants_processor/: CMakeLists.txt  alphabet.c  alphabet.h  common.h  data.c  data.h  main.c  max_state.c  min_state_bits.c  min_state_bits.h  next_state_by_last_symbols.c  next_state_by_last_symbols.h  options.h  prefix.c  print.h
cmake/generators/generic_processor/: CMakeLists.txt  alphabet.c  alphabet.h  common.h  data.c  data.h  main.c  max_state.c  max_state.h  min_state_bits.c  options.h  print.h
cmake/generators/parser_from_constants/: CMakeLists.txt  alphabet.c  alphabet.h  common.h  data.c  main.c  max_state.c  max_state.h  min_state_bits.c  next_state_by_last_symbols.c  next_state_by_last_symbols.h  prefix.c  prefix.h
cmake/generators/registry/: CMakeLists.txt  alphabet.c  alphabet.h  constants.c  constants.h  file.c  file.h  main.c  print.h
src/processor/: CMakeLists.txt
src/processor/any_except_separator_and_terminator/: CMakeLists.txt  main.c  main.h  options.c
src/processor/any_except_separators_and_terminators/: CMakeLists.txt  main.c  main.h
src/processor/any_except_terminator/: CMakeLists.txt  main.c  main.h  options.c
src/processor/any_except_terminators/: CMakeLists.txt  main.c  main.h  options.c
src/processor/any_text/: CMakeLists.txt  main.c  main.h  options.c
src/processor/any_token/: CMakeLists.txt  main.c  main.h  options.c
src/processor/any_visible_text/: CMakeLists.txt  main.c  main.h  options.c
src/processor/any_visible_text_except_separator/: CMakeLists.txt  main.c  main.h  options.c
src/processor/any_vtext/: CMakeLists.txt  main.c  main.h
src/processor/constant/: main.c.in  main.h.in
src/processor/constants/: main.c.in  main.h.in
src/processor/generator/: GenerateConstant.cmake  GenerateConstants.cmake  GenerateGeneric.cmake
src/processor/generator/constant/: main.c.in  main.h.in  options.h
src/processor/generator/constants/: main.c.in  main.h.in  options.h
src/processor/generator/generic/: main.c.in  main.h.in  options.h
src/processor/generic/: main.c.in  main.h.in
src/processor/header/: CMakeLists.txt
src/processor/header/any_except_separator/: CMakeLists.txt  main.c  main.h  options.c
src/processor/header/any_except_separator_and_terminator/: CMakeLists.txt  main.c  main.h  options.c
src/processor/header/name/: CMakeLists.txt
src/processor/header/name/1_0/: CMakeLists.txt  main.c  main.h  options.c
src/processor/header/name/1_1/: CMakeLists.txt  main.c  main.h  options.c  options.c.in
src/processor/header/separator/: CMakeLists.txt  main.c  main.h  options.c
src/processor/header_separator/: main.c  main.h
src/processor/method/: CMakeLists.txt
src/processor/method/0_9/: CMakeLists.txt  main.c  main.h  options.c
src/processor/method/1_0/: CMakeLists.txt  main.c  main.h  options.c
src/processor/method/1_1/: CMakeLists.txt  main.c  main.h  options.c  options.c.in
src/processor/method/any/: CMakeLists.txt  main.c  main.h
src/processor/method/any_from_standard/: CMakeLists.txt  main.c  main.h  options.c  options.c.in
src/processor/method/generic/: CMakeLists.txt  main.c  options.c  options.h  processor.c  processor.h
src/processor/method/v0_9/: CMakeLists.txt  options.h  processor.c  processor.h
src/processor/method/v1_0/: CMakeLists.txt  options.c  options.h  processor.c  processor.h
src/processor/method/v1_1/: CMakeLists.txt  options.c  options.h  processor.c  processor.h
src/processor/separator/: CMakeLists.txt  main.c  main.h  options.c  options.h  processor.c
src/processor/status/: CMakeLists.txt
src/processor/status/code/: CMakeLists.txt
src/processor/status/code/1_0/: CMakeLists.txt  main.c  main.h  options.c
src/processor/status/code/1_1/: CMakeLists.txt  main.c  main.h  options.c  options.c.in
src/processor/status/code/any/: CMakeLists.txt  main.c  main.h  options.c
src/processor/status/code/any_from_standard/: CMakeLists.txt  main.c  main.h  options.c
src/processor/status/code/generic/: CMakeLists.txt  main.c  main.h  options.c
src/processor/status/description/1_0/: CMakeLists.txt  main.c  main.h  options.c
src/processor/status/description/1_1/: CMakeLists.txt  main.c  main.h  options.c
src/processor/status/description/any/: CMakeLists.txt  main.c  main.h  options.c
src/processor/status/description/any_from_standard/: CMakeLists.txt  main.c  main.h  options.c
src/processor/status/description/generic/: main.c  (+3 more)
src/processor/terminator/: CMakeLists.txt  main.c  main.h  options.c  options.h  processor.c  processor.h
src/processor/uri/: CMakeLists.txt  main.c  main.h  options.c  options.h  processor.c
src/processor/uri/any/: CMakeLists.txt  main.c  main.h  options.c
src/processor/uri/any_from_reality/: CMakeLists.txt  main.c  main.h  options.c
src/processor/uri/any_from_standard/: CMakeLists.txt  main.c  main.h  options.c
src/processor/version/: CMakeLists.txt
src/processor/version/1_0/: CMakeLists.txt  main.c  main.h  options.c
src/processor/version/1_0_and_1_1/: CMakeLists.txt  main.c  main.h  options.c
src/processor/version/1_0_or_1_1/: CMakeLists.txt  main.c  main.h  options.c
src/processor/version/1_1/: CMakeLists.txt  main.c  main.h  options.c
src/processor/version/any/: CMakeLists.txt  main.c  main.h  options.c
src/processor/version/any_from_standard/: CMakeLists.txt  main.c  main.h  options.c
src/processor/version/any_standard/: CMakeLists.txt  main.c  main.h  options.c
src/processor/version/generic/: CMakeLists.txt  main.c  main.h  options.c  processor.c
src/processor/version/v1_0/: CMakeLists.txt  options.c  options.h  processor.c  processor.h
src/processor/version/v1_1/: CMakeLists.txt  options.c  options.h  processor.c  processor.h
src/processor/version_prefix/: CMakeLists.txt  main.c  main.h  options.c  options.h  processor.c  processor.h
(+159 files in other folders)
