list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/generator")

add_subdirectory ("any_except_separators_and_terminators")
add_subdirectory ("any_except_terminators")
add_subdirectory ("any_token")
add_subdirectory ("any_visible_text")
add_subdirectory ("header_separator")
add_subdirectory ("method")
add_subdirectory ("separator")
add_subdirectory ("status")
add_subdirectory ("terminator")
add_subdirectory ("uri")
add_subdirectory ("version")
add_subdirectory ("version_prefix")
