list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/generator")

add_subdirectory ("any_except_separator_and_terminator")
add_subdirectory ("any_except_terminator")
add_subdirectory ("any_token")
add_subdirectory ("any_visible_text")
add_subdirectory ("any_visible_text_except_separator")
add_subdirectory ("header")
add_subdirectory ("method")
add_subdirectory ("separator")
add_subdirectory ("status")
add_subdirectory ("terminator")
add_subdirectory ("uri")
add_subdirectory ("version")
add_subdirectory ("version_prefix")
